--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,49 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes, viewport-fit=cover">
+        <meta name="HandheldFriendly" content="true">
+        <meta name="MobileOptimized" content="width">
+        <meta name="mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+        <meta name="apple-mobile-web-app-title" content="Susin Group">
+        <meta name="format-detection" content="telephone=yes">
+        <meta name="theme-color" content="#c41e3a" media="(prefers-color-scheme: light)">
+        <meta name="theme-color" content="#1a2942" media="(prefers-color-scheme: dark)">
+        <meta name="msapplication-TileColor" content="#c41e3a">
+        <link rel="apple-touch-icon" href="assets/img/icons/apple-touch-icon.png">
+        <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+        <meta name="googlebot" content="index, follow">
+        <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+        <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+        <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
+        <meta property="og:site_name" content="Susin Group">
+        <meta name="twitter:site" content="@susingroup">
+        <meta name="twitter:creator" content="@susingroup">
+        <title>Contact Susin Group | Get Quote & Technical Support | Industrial Actuators</title>
+        <meta name="description" content="Contact Susin Group for actuator quotes & support. ✓ 24/7 Technical Assistance ✓ Global Offices ✓ Fast Response Time. Call +91-77080-97242 or submit inquiry form.">
+        <meta name="keywords" content="contact susin group, actuator quotes, technical support, sales inquiry, office locations, customer service, inquiry form, support tickets, get quote">
+        <meta name="author" content="Susin Group">
+        <meta name="geo.region" content="IN-TN">
+        <link rel="canonical" href="https://www.susingroup.com/contact.html" />
+        <link rel="alternate" hreflang="en" href="https://www.susingroup.com/contact.html">
+        <link rel="alternate" hreflang="x-default" href="https://www.susingroup.com/contact.html">
+        <link rel="icon" href="logo.jpg">
+        <link rel="manifest" href="site.webmanifest">
+
+        <!-- Performance hints -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
+        <link rel="preload" href="css/style.css" as="style">
+        <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" as="style" crossorigin>
+
+        <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/navigation.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" crossorigin>
+</head>
 <body>
 
 <!-- 
@@ -577,6 +623,7 @@
     </footer>
 
     <script src="js/main.js" defer></script>
+    <script src="js/navigation.js"></script>
 </body>
 </html>
 
