--- a/services.html
+++ b/services.html
@@ -1,3 +1,44 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes, viewport-fit=cover">
+        <meta name="HandheldFriendly" content="true">
+        <meta name="MobileOptimized" content="width">
+        <meta name="mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+        <meta name="apple-mobile-web-app-title" content="Susin Group">
+        <meta name="format-detection" content="telephone=yes, address=yes, email=yes">
+        <meta name="theme-color" content="#c41e3a" media="(prefers-color-scheme: light)">
+        <meta name="theme-color" content="#1a2942" media="(prefers-color-scheme: dark)">
+        <meta name="msapplication-TileColor" content="#c41e3a">
+        <link rel="apple-touch-icon" href="assets/img/icons/apple-touch-icon.png">
+        <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+        <meta name="googlebot" content="index, follow">
+        <title>Industrial Actuator Services | Installation, Maintenance & Support | Susin Group</title>
+        <meta name="description" content="Comprehensive actuator services: installation, commissioning, preventive maintenance, emergency repairs, training & custom solutions. ✓ Expert Support ✓ Global Service Network ✓ 24/7 Technical Assistance ✓ Genuine Spare Parts ✓ On-site Services">
+        <meta name="keywords" content="actuator services, actuator installation, valve automation commissioning, actuator maintenance, preventive maintenance, emergency repair, actuator training, technical support, custom actuator solutions, spare parts, retrofitting, actuator upgrades, field service, on-site support, actuator troubleshooting">
+        <meta name="author" content="Susin Group">
+        <meta name="copyright" content="© 2025 Susin Group. All rights reserved.">
+        <meta name="language" content="English">
+        <link rel="canonical" href="https://www.susingroup.com/services.html" />
+        <link rel="alternate" hreflang="en" href="https://www.susingroup.com/services.html">
+        <link rel="alternate" hreflang="x-default" href="https://www.susingroup.com/services.html">
+        <link rel="icon" href="logo.jpg">
+        <link rel="manifest" href="site.webmanifest">
+
+        <!-- Performance hints -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
+        <link rel="preload" href="css/style.css" as="style">
+        <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" as="style" crossorigin>
+
+        <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/navigation.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" crossorigin>
+</head>
 <body>
 
 <!-- 
@@ -539,6 +580,7 @@
     </footer>
 
     <script src="js/main.js" defer></script>
+    <script src="js/navigation.js"></script>
 </body>
 </html>
 
