--- a/resources-technical-docs.html
+++ b/resources-technical-docs.html
@@ -1,3 +1,40 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes, viewport-fit=cover">
+    <meta name="HandheldFriendly" content="true">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="format-detection" content="telephone=yes, address=yes, email=yes">
+    <meta name="theme-color" content="#c41e3a" media="(prefers-color-scheme: light)">
+        <meta name="theme-color" content="#1a2942" media="(prefers-color-scheme: dark)">
+    <link rel="apple-touch-icon" href="assets/img/icons/apple-touch-icon.png">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+        <meta name="googlebot" content="index, follow">
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+    <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
+    <title>Resources — Datasheets, Manuals & Sizing Tools</title>
+    <meta name="description" content="Datasheets, installation & operation manuals, sizing programs, FAQs and technical resources for Susin Group products and solutions. ✓ Free Downloads ✓ CAD Files ✓ Technical Specifications ✓ Selection Tools">
+    <meta name="keywords" content="datasheets, manuals, technical documentation, sizing programs, CAD drawings, FAQs, product resources, downloads, operation manuals, installation guides, maintenance guides, 2D drawings, 3D models, torque calculations, spec sheets">
+    <meta name="author" content="Susin Group">
+    <meta name="copyright" content="© 2025 Susin Group. All rights reserved.">
+    <meta name="language" content="English">
+    <link rel="canonical" href="https://www.susingroup.com/resources-technical-docs.html" />
+        <link rel="alternate" hreflang="en" href="https://www.susingroup.com/resources-technical-docs.html">
+        <link rel="alternate" hreflang="x-default" href="https://www.susingroup.com/resources-technical-docs.html">
+    <link rel="icon" href="logo.jpg">
+        <link rel="manifest" href="site.webmanifest">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
+    <link rel="preload" href="css/style.css" as="style">
+
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/navigation.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" crossorigin>
+</head>
 <body>
 
 <!-- 
