--- a/global-presence/susin-itork-india.html
+++ b/global-presence/susin-itork-india.html
@@ -956,6 +956,18 @@
         </div>
     </footer>
 
+    <!-- Chatbot / Technical Support Widget -->
+    <div id="chatbot" class="chatbot" aria-hidden="false">
+        <button id="chatToggle" class="chat-toggle" aria-label="Open technical support chat" aria-expanded="false"><i class="fas fa-headset"></i></button>
+        <div id="chatWindow" class="chat-window" hidden>
+            <div id="chatMessages" class="chat-messages" role="log" aria-live="polite"></div>
+            <form id="chatForm" class="chat-form">
+                <input id="chatInput" type="text" placeholder="Describe your issue or ask a question..." aria-label="Chat input" required>
+                <button type="submit" class="btn btn-primary">Send</button>
+            </form>
+        </div>
+    </div>
+
     <script src="../js/main.js" defer></script>
     <script src="../js/navigation.js"></script>
 </body>
