--- a/resources-technical-docs.html
+++ b/resources-technical-docs.html
@@ -529,3 +529,15 @@
                     <div class="sizing-grid">
                         <div>
                             <h4 class="sizing-subtitle">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <script src='js/main.js' defer></script>
+    <script src='js/navigation.js'></script>
+</body>
+</html>
