--- a/global-presence/susin-itork-india.html
+++ b/global-presence/susin-itork-india.html
@@ -258,9 +258,9 @@
                                 <div class="mega-col">
                                     <h4 class="mega-title">Our Locations</h4>
                                     <ul class="mega-list">
-                                        <li><a href="global-presence/susin-itork-india.html" role="menuitem"><i class="fas fa-map-marker-alt"></i> India</a></li>
-                                        <li><a href="global-presence/susin-itork-uae.html" role="menuitem"><i class="fas fa-map-marker-alt"></i> UAE</a></li>
-                                        <li><a href="global-presence/susin-itork-qatar.html" role="menuitem"><i class="fas fa-map-marker-alt"></i> Qatar</a></li>
+                                        <li><a href="./susin-itork-india.html" role="menuitem"><i class="fas fa-map-marker-alt"></i> India</a></li>
+                                        <li><a href="./susin-itork-uae.html" role="menuitem"><i class="fas fa-map-marker-alt"></i> UAE</a></li>
+                                        <li><a href="./susin-itork-qatar.html" role="menuitem"><i class="fas fa-map-marker-alt"></i> Qatar</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -406,9 +406,9 @@
                             <i class="fas fa-chevron-down toggle-icon"></i>
                         </button>
                         <ul class="submenu">
-                            <li><a href="global-presence/susin-itork-india.html">India</a></li>
-                            <li><a href="global-presence/susin-itork-uae.html">UAE</a></li>
-                            <li><a href="global-presence/susin-itork-qatar.html">Qatar</a></li>
+                            <li><a href="./susin-itork-india.html">India</a></li>
+                            <li><a href="./susin-itork-uae.html">UAE</a></li>
+                            <li><a href="./susin-itork-qatar.html">Qatar</a></li>
                         </ul>
                     </li>
                     <li><a href="../about.html"><i class="fas fa-building"></i> About Us</a></li>
