--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         <link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
         <link rel="stylesheet" href="css/style.css" fetchpriority="high">
     <link rel="stylesheet" href="css/navigation.css">
+    <link rel="stylesheet" href="css/login.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" media="print" onload="this.media='all'" crossorigin>
         <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"></noscript>
 
@@ -444,6 +445,10 @@
                     <button class="btn-action btn-search" id="searchToggle" aria-label="Open search" title="Search">
                         <i class="fas fa-search"></i>
                     </button>
+                    <button class="btn-action btn-login" id="loginToggle" aria-label="Login" title="Employee Login">
+                        <i class="fas fa-user"></i>
+                        <span class="btn-text">Login</span>
+                    </button>
                     <a href="contact.html#quote" class="btn-action btn-quote">
                         <i class="fas fa-file-invoice-dollar"></i>
                         <span class="btn-text">Get Quote</span>
@@ -579,6 +584,73 @@
             </nav>
         </div>
         <div class="mobile-backdrop" aria-hidden="true"></div>
+    </div>
+
+    <!-- Login Modal -->
+    <div class="login-modal" id="loginModal" role="dialog" aria-modal="true" aria-labelledby="loginTitle" hidden>
+        <div class="login-container">
+            <div class="login-header">
+                <h2 id="loginTitle">Employee Login</h2>
+                <button class="login-close" id="loginClose" aria-label="Close login">
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
+            <div class="login-body">
+                <div id="loginAlert" class="alert" style="display: none;"></div>
+                <form id="loginForm" class="login-form">
+                    <div class="form-group">
+                        <label for="loginUsername">
+                            <i class="fas fa-user"></i> Username or Email
+                        </label>
+                        <input 
+                            type="text" 
+                            id="loginUsername" 
+                            name="username" 
+                            class="form-control" 
+                            placeholder="Enter your username or email"
+                            required
+                            autocomplete="username"
+                        >
+                    </div>
+                    <div class="form-group">
+                        <label for="loginPassword">
+                            <i class="fas fa-lock"></i> Password
+                        </label>
+                        <div class="password-input-wrapper">
+                            <input 
+                                type="password" 
+                                id="loginPassword" 
+                                name="password" 
+                                class="form-control" 
+                                placeholder="Enter your password"
+                                required
+                                autocomplete="current-password"
+                            >
+                            <button type="button" class="password-toggle" id="togglePassword" aria-label="Toggle password visibility">
+                                <i class="fas fa-eye"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="form-group form-options">
+                        <label class="checkbox-label">
+                            <input type="checkbox" name="remember" id="rememberMe">
+                            <span>Remember me</span>
+                        </label>
+                        <a href="#" class="forgot-password" id="forgotPasswordLink">Forgot Password?</a>
+                    </div>
+                    <button type="submit" class="btn btn-primary btn-block" id="loginButton">
+                        <i class="fas fa-sign-in-alt"></i> Login
+                    </button>
+                </form>
+                <div class="login-footer">
+                    <p class="login-info">
+                        <i class="fas fa-info-circle"></i> 
+                        For access issues, contact IT Support: <a href="mailto:it@susin.in">it@susin.in</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="login-backdrop" aria-hidden="true"></div>
     </div>
 </header>
 
@@ -1422,5 +1494,6 @@
 
     <script src="js/main.js" defer></script>
     <script src="js/navigation.js"></script>
+    <script src="js/login.js"></script>
 </body>
 </html>
