--- a/React website/index.html
+++ b/React website/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="alternate icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="SUSIN iTORK India - Leading manufacturer of Industrial Actuators & Valve Automation Solutions. Pneumatic, Electro-Hydraulic, Electrical Actuators. ISO 9001:2015 Certified. Serving India, UAE, Qatar since 1992." />
-    <meta name="keywords" content="industrial actuators, pneumatic actuators, valve automation, electro-hydraulic actuators, electrical actuators, gearboxes, SUSIN iTORK, ISO 9001, India, UAE, Qatar" />
-    <meta name="author" content="SUSIN iTORK India Pvt. Ltd." />
-    <title>SUSIN iTORK India - Industrial Actuators & Valve Automation | ISO 9001:2015</title>
+    <meta name="description" content="Susin Group - Leading manufacturer of Industrial Actuators & Valve Automation Solutions. Pneumatic, Electro-Hydraulic, Electrical Actuators. ISO 9001:2015 Certified. Serving India, UAE, Qatar since 1992." />
+    <meta name="keywords" content="industrial actuators, pneumatic actuators, valve automation, electro-hydraulic actuators, electrical actuators, gearboxes, Susin Group, ISO 9001, India, UAE, Qatar" />
+    <meta name="author" content="Susin Group" />
+    <title>Susin Group - Industrial Actuators & Valve Automation | ISO 9001:2015</title>
     
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
